# building_telemetry_agent

./: README.md  pyproject.toml  tmp_sql_extract_test.py
data/: telemetry.db
data/telemetry.duckdb/: load.sql  schema.sql
src/: __init__.py  agent.py  api.py  create_sqlite_db.py  database.py  duck_db_creation.py  knowledge_graph.py  sql_generation.py  sql_safety.py
web/: index.html
